syntax = "proto3";
package nexus.workspace.v1;

option go_package = "github.com/nexus/nexus/pkg/workspace/v1";

import "google/protobuf/timestamp.proto";

service WorkspaceService {
  rpc CreateWorkspace(CreateWorkspaceRequest) returns (Workspace);
  rpc GetWorkspace(GetWorkspaceRequest) returns (Workspace);
  rpc ListWorkspaces(ListWorkspacesRequest) returns (ListWorkspacesResponse);
  rpc UpdateWorkspace(UpdateWorkspaceRequest) returns (Workspace);
  rpc DeleteWorkspace(DeleteWorkspaceRequest) returns (DeleteWorkspaceResponse);

  rpc StartWorkspace(StartWorkspaceRequest) returns (Operation);
  rpc StopWorkspace(StopWorkspaceRequest) returns (Operation);
  rpc SwitchWorkspace(SwitchWorkspaceRequest) returns (SwitchWorkspaceResponse);

  rpc StreamFile(StreamFileRequest) returns (stream FileChunk);
  rpc WriteFile(stream WriteFileRequest) returns (WriteFileResponse);

  rpc ExecStream(ExecRequest) returns (stream ExecOutput);

  rpc CreateSnapshot(CreateSnapshotRequest) returns (Snapshot);
  rpc RestoreSnapshot(RestoreSnapshotRequest) returns (Operation);

  rpc GetStats(GetStatsRequest) returns (ResourceStats);
  rpc StreamStats(StreamStatsRequest) returns (stream ResourceStats);
  rpc StreamEvents(StreamEventsRequest) returns (stream WorkspaceEvent);
}

enum WorkspaceStatus {
  WORKSPACE_STATUS_UNSPECIFIED = 0;
  WORKSPACE_STATUS_PENDING = 1;
  WORKSPACE_STATUS_STOPPED = 2;
  WORKSPACE_STATUS_RUNNING = 3;
  WORKSPACE_STATUS_PAUSED = 4;
  WORKSPACE_STATUS_ERROR = 5;
  WORKSPACE_STATUS_DESTROYING = 6;
  WORKSPACE_STATUS_DESTROYED = 7;
}

enum BackendType {
  BACKEND_TYPE_UNSPECIFIED = 0;
  BACKEND_TYPE_DOCKER = 1;
  BACKEND_TYPE_SPRITE = 2;
  BACKEND_TYPE_KUBERNETES = 3;
}

message Workspace {
  string id = 1;
  string name = 2;
  string display_name = 3;
  WorkspaceStatus status = 4;
  BackendType backend = 5;
  Repository repository = 6;
  string branch = 7;
  ResourceAllocation resources = 8;
  repeated PortMapping ports = 9;
  WorkspaceConfig config = 10;
  map<string, string> labels = 11;
  map<string, string> annotations = 12;

  google.protobuf.Timestamp created_at = 20;
  google.protobuf.Timestamp updated_at = 21;
  google.protobuf.Timestamp last_active_at = 22;
  google.protobuf.Timestamp expires_at = 23;
}

message Repository {
  string url = 1;
  string provider = 2;
  string local_path = 3;
  string default_branch = 4;
  string current_commit = 5;
}

message ResourceAllocation {
  double cpu_cores = 1;
  double cpu_limit = 2;
  int64 memory_bytes = 3;
  int64 memory_limit = 4;
  int64 storage_bytes = 5;
}

message PortMapping {
  string name = 1;
  string protocol = 2;
  int32 container_port = 3;
  int32 host_port = 4;
  string visibility = 5;
  string url = 6;
}

message WorkspaceConfig {
  string image = 1;
  string devcontainer_path = 2;
  map<string, string> env = 3;
  repeated string env_files = 4;
  repeated VolumeConfig volumes = 5;
  repeated ServiceConfig services = 6;
  WorkspaceHooks hooks = 7;
  int32 idle_timeout = 8;
  string shutdown_behavior = 9;
}

message VolumeConfig {
  string type = 1;
  string source = 2;
  string target = 3;
  bool read_only = 4;
}

message ServiceConfig {
  string name = 1;
  string image = 2;
  repeated PortMapping ports = 3;
  map<string, string> env = 4;
  repeated VolumeConfig volumes = 5;
  repeated string depends_on = 6;
}

message WorkspaceHooks {
  repeated string pre_create = 1;
  repeated string post_create = 2;
  repeated string pre_start = 3;
  repeated string post_start = 4;
  repeated string pre_stop = 5;
  repeated string post_stop = 6;
}

message CreateWorkspaceRequest {
  string name = 1;
  string display_name = 2;
  BackendType backend = 3;
  string repository_url = 4;
  string branch = 5;
  string resource_class = 6;
  WorkspaceConfig config = 7;
  map<string, string> labels = 8;
}

message GetWorkspaceRequest {
  string id = 1;
  string name = 2;
}

message ListWorkspacesRequest {
  string status_filter = 1;
  string backend_filter = 2;
  string label_selector = 3;
  int32 page_size = 4;
  string page_token = 5;
}

message ListWorkspacesResponse {
  repeated Workspace workspaces = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

message UpdateWorkspaceRequest {
  string id = 1;
  WorkspaceConfig config = 2;
  map<string, string> labels = 3;
}

message DeleteWorkspaceRequest {
  string id = 1;
  bool force = 2;
}

message DeleteWorkspaceResponse {
  bool success = 1;
}

message StartWorkspaceRequest {
  string id = 1;
}

message StopWorkspaceRequest {
  string id = 1;
  int32 timeout_seconds = 2;
}

message SwitchWorkspaceRequest {
  string from_id = 1;
  string to_id = 2;
}

message SwitchWorkspaceResponse {
  bool success = 1;
  int64 switch_duration_ms = 2;
  Workspace active_workspace = 3;
}

message Operation {
  string id = 1;
  string status = 2;
  string error_message = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp completed_at = 5;
}

message StreamFileRequest {
  string workspace_id = 1;
  string path = 2;
  string encoding = 3;
}

message FileChunk {
  bytes data = 1;
  int64 offset = 2;
  bool eof = 3;
}

message WriteFileRequest {
  string workspace_id = 1;
  string path = 2;
  bytes data = 3;
  string encoding = 4;
}

message WriteFileResponse {
  bool success = 1;
  int64 bytes_written = 2;
}

message ExecRequest {
  string workspace_id = 1;
  string command = 2;
  repeated string args = 3;
  string cwd = 4;
  map<string, string> env = 5;
  int32 timeout_seconds = 6;
}

message ExecOutput {
  enum Stream {
    STDOUT = 0;
    STDERR = 1;
  }
  Stream stream = 1;
  bytes data = 2;
  int32 exit_code = 3;
  bool done = 4;
}

message CreateSnapshotRequest {
  string workspace_id = 1;
  string name = 2;
  string description = 3;
}

message Snapshot {
  string id = 1;
  string workspace_id = 2;
  string name = 3;
  string description = 4;
  int64 size_bytes = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp expires_at = 7;
}

message RestoreSnapshotRequest {
  string snapshot_id = 1;
  string target_workspace_id = 2;
}

message GetStatsRequest {
  string workspace_id = 1;
}

message StreamStatsRequest {
  string workspace_id = 1;
  int32 interval_seconds = 2;
}

message ResourceStats {
  string workspace_id = 1;
  double cpu_usage_percent = 2;
  int64 memory_used_bytes = 3;
  int64 memory_limit_bytes = 4;
  int64 disk_used_bytes = 5;
  int64 network_rx_bytes = 6;
  int64 network_tx_bytes = 7;
  google.protobuf.Timestamp timestamp = 8;
}

message StreamEventsRequest {
  string workspace_id = 1;
  repeated string event_types = 2;
}

message WorkspaceEvent {
  string id = 1;
  string workspace_id = 2;
  string event_type = 3;
  string data = 4;
  string actor_type = 5;
  string actor_id = 6;
  google.protobuf.Timestamp occurred_at = 7;
}
